; ModuleID = '/home/carl/AnghaBench/streem/src/extr_exec.c_cfunc_exec.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_exec.c_cfunc_exec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 (%struct.TYPE_6__*, i32, i32*, i32*)* }

@STRM_OK = common dso_local global i64 0, align 8
@STRM_NG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i32)* @cfunc_exec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cfunc_exec(%struct.TYPE_6__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64 (%struct.TYPE_6__*, i32, i32*, i32*)*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = load i64 (%struct.TYPE_6__*, i32, i32*, i32*)*, i64 (%struct.TYPE_6__*, i32, i32*, i32*)** %9, align 8
  store i64 (%struct.TYPE_6__*, i32, i32*, i32*)* %10, i64 (%struct.TYPE_6__*, i32, i32*, i32*)** %7, align 8
  %11 = load i64 (%struct.TYPE_6__*, i32, i32*, i32*)*, i64 (%struct.TYPE_6__*, i32, i32*, i32*)** %7, align 8
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %13 = call i64 %11(%struct.TYPE_6__* %12, i32 1, i32* %5, i32* %6)
  %14 = load i64, i64* @STRM_OK, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %22

16:                                               ; preds = %2
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @strm_emit(%struct.TYPE_6__* %17, i32 %18, i32* null)
  %20 = load i64, i64* @STRM_OK, align 8
  %21 = trunc i64 %20 to i32
  store i32 %21, i32* %3, align 4
  br label %24

22:                                               ; preds = %2
  %23 = load i32, i32* @STRM_NG, align 4
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %22, %16
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @strm_emit(%struct.TYPE_6__*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
